# tweet-robot

./: Cargo.toml  Makefile  README.md
core/: Cargo.toml
core/src/: main.rs  twitter_api.rs
core/src/api/: mod.rs  tweet_drafts.rs  tweet_schedules.rs  twitter_user.rs
scripts/: parallel_commands
src/: db.rs  main.rs
src/api/: mod.rs  tweet_schedules.rs
web/: .prettierrc  index.html  package.json  vite.config.ts
web/src/: Root.tsx  index.css  main.tsx  theme.ts
web/src/api/: types.tsx  useAxios.ts  useUserData.ts
web/src/api/tweetDrafts/: useAllTweetDrafts.ts  useCreateTweetDraft.ts  useDeleteTweetDraft.ts  useUpdateTweetDraft.ts
web/src/api/tweetSchedules/: useAllTweetSchedules.ts
web/src/components/TweetBox/: CircleIndicator.tsx  index.tsx
web/src/components/TweetDraftBox/: index.tsx
web/src/containers/DraftsIndex/: MainDraftBody.tsx  index.tsx
web/src/containers/Home/: index.tsx
web/src/containers/SharedLayout/: CustomLink.tsx  index.tsx
web/src/contexts/: User.tsx
web/src/utils/: arrayInsert.ts  callFunctionOrReturn.ts
