[package]
name = "tweet_robot"
version = "0.1.0"
authors = ["Michael Salim <salim_michaelmi@yahoo.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
egg-mode = "0.16.0"
rocket_cors = "0.6.0-alpha1"
rusqlite = { version = "0.27.0", features = ["bundled"] }
serde = "1.0.136"
serde_json = "1.0"
tokio = { version = "1.18.0", features = ["full"] }

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]